--- a/js/web api/案例/06-简单版发布留言案例.html
+++ b/js/web api/案例/06-简单版发布留言案例.html
@@ -36,6 +36,9 @@
             font-size: 14px;
             margin: 15px 0;
         }
+        li a {
+            float: right;
+        }
     </style>
 </head>
 
@@ -56,9 +59,16 @@
             var li = document.createElement('li');
             if (text.value == '') {
                 alert('不能输入为空');
-            }else {
-                li.innerHTML = text.value;
+            } else {
+                li.innerHTML = text.value + "<a href='javascript:;'>删除</a>";
                 ul.appendChild(li);
+                // 3.删除元素
+                var as = document.querySelectorAll('a');
+                for (var i = 0; i < as.length; i++) {
+                    as[i].onclick = function () {
+                        ul.removeChild(this.parentNode);
+                    }
+                }
             }
         }
     </script>
