--- a/js/web api/案例/07-动态生成表格案例.html
+++ b/js/web api/案例/07-动态生成表格案例.html
@@ -80,7 +80,7 @@
             }
             // 3. 创建有删除2个字的单元格 
             var td = document.createElement('td');
-            td.innerHTML = '<a href="javascript:;">删除 </a>'; , 
+            td.innerHTML = '<a href="javascript:;">删除 </a>';
             tr.appendChild(td);
 
         }
