--- a/js/web api/14-换肤效果.html
+++ b/js/web api/14-换肤效果.html
@@ -26,17 +26,17 @@
         }
 
         body {
-            background: url(imges/1.jpg) no-repeat;
+            background: url(./images/1.jpg) no-repeat;
         }
     </style>
 </head>
 
 <body>
     <ul class="baidu">
-        <li><img src="imges/1.jpg" alt=""></li>
-        <li><img src="imges/4.jpg" alt=""></li>
-        <li><img src="imges/5.jpg" alt=""></li>
-        <li><img src="imges/6.jpg" alt=""></li>
+        <li><img src="./images/1.jpg" alt=""></li>
+        <li><img src="./images/2.jpg" alt=""></li>
+        <li><img src="./images/3.jpg" alt=""></li>
+        <li><img src="./images/4.jpg" alt=""></li>
     </ul>
     <script>
         // 1.获取元素
